2006-03-25  Tommi Vainikainen  <thv@iki.fi>

	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).

2006-03-17  Steve Frécinaux  <steve@istique.net>

	* gtksourceview/language-specs/perl.lang: fix 334853 by removing
	elseif keyword.

2006-03-15  Steve Frécinaux  <steve@istique.net>

	* gtksourceview/language-specs/php.lang: add a few PHP5 keywords:
	try, catch, throw, implements, final.

=== gtksourceview 1.6.0 ===

2006-03-12  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.6.0

2006-02-25  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Add "zh_HK" to ALL_LINGUAS.

=== gtksourceview 1.5.7 ===

2006-01-16  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.5.7

=== gtksourceview 1.5.6 ===

2006-01-16  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.5.6

2006-01-16  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c: fix xdg lookup once
	again.

=== gtksourceview 1.5.5 ===

2006-01-15  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.5.5

2006-01-16  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #318577 – win32 port
	
	Based on a patch by Tor Lillqvist modified by Paolo Borelli
	
	* configure.in: added gtksourceview-zip to AC_CONFIG_FILES
	
	* makefile.am: added gtksourceview-zip.in to EXTRA_DIST
	
	* gtksourceview-zip.in: new file
	
	* gtksourceview/Makefile.am: define PREFIX in INCLUDES

	* gtksourceview/gtksourcelanguage.c
	(_gtk_source_language_new_from_file): use xmlReaderForFd instead of
	xmlNewTextReaderFilename so that it's utf8 safe on win32.
	 (get_mime_types_from_file): ditto
	(language_file_parse):  use GMappedFile and xmlParseMemory instead of
	xmlParseFile
	
2006-01-15  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagesmanager.c: fetch lang files in the
	right order so that files in ~ can override the system ones and make