@@ -1,3 +1,8 @@
+2006-04-06  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview.c: consume the button press event
+	in the line numbers margin.
+
 2006-03-25  Tommi Vainikainen  <thv@iki.fi>
 
 	* configure.in (ALL_LINGUAS): Added Dzongkha (dz).
